--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,20 @@
+spring:
+  # Jdbc Configuration
+  datasource:
+    url: jdbc:postgresql://localhost:5432/notification_db
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  # Jpa/hibernate Configuration
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+# Mail Configuration
 server:
   port: 2222
 custom:
@@ -15,6 +32,8 @@ custom:
 source:
  sender:
    email: muhammadhussein2312@gmail.com
+
+# Eureka Server Configuration
 eureka:
   client:
     serviceUrl:
