--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/notification_db
     username: postgres
-    password: postgres
+    password: 12345
     driver-class-name: org.postgresql.Driver
   # Jpa/hibernate Configuration
   jpa:
