[FAWRY-16] feat: Implement Reset Password Email Notification in Notification Microservice

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -46,7 +46,7 @@ custom:
     host: smtp.gmail.com
     port: 587
     username: muhammadhussein2312@gmail.com
-    password: zxsm iyuy jtze pnkq
+    password: mxgw pyih dfpx sejg
     properties:
       mail:
         smtp:
