--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -29,7 +29,7 @@ spring:
       properties:
         allow.auto.create.topics: true
         spring.json.trusted.packages: "com.fawry.kafka.events"
-        spring.json.type.mapping: productEvent:com.fawry.kafka.events.ProductEvent, registerEvent:com.fawry.kafka.events.RegisterEvent
+        spring.json.type.mapping: productEvent:com.fawry.kafka.events.ProductEvent, registerEvent:com.fawry.kafka.events.RegisterEvent, resetPasswordEvent:com.fawry.kafka.events.ResetPasswordEvent
 
     producer:
       bootstrap-servers: localhost:9092
@@ -46,7 +46,7 @@ custom:
     host: smtp.gmail.com
     port: 587
     username: muhammadhussein2312@gmail.com
-    password: zxsm iyuy jtze pnkq
+    password: mxgw pyih dfpx sejg
     properties:
       mail:
         smtp:
