--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,7 +29,12 @@ spring:
       properties:
         allow.auto.create.topics: true
         spring.json.trusted.packages: "com.fawry.kafka.events"
-        spring.json.type.mapping: productEvent:com.fawry.kafka.events.ProductEvent, registerEvent:com.fawry.kafka.events.RegisterEvent, resetPasswordEvent:com.fawry.kafka.events.ResetPasswordEvent, orderCanceledEventDTO:com.fawry.kafka.events.OrderCanceledEventDTO
+        spring.json.type.mapping:
+                 registerEvent:com.fawry.kafka.events.user_events.RegisterEvent,
+                 resetPasswordEvent:com.fawry.kafka.events.user_events.ResetPasswordEvent,
+                 shippingStatusEvent:com.fawry.kafka.events.order_events.ShippingStatusEvent,
+                 orderCancelNotificationEvent:com.fawry.kafka.events.OrderCancelNotificationEvent
+
 
     producer:
       bootstrap-servers: localhost:9092
@@ -37,7 +42,7 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         spring.json.add.type.headers: true
-        spring.json.type.mapping: registerEvent:com.fawry.kafka.events.RegisterEvent
+        spring.json.type.mapping: registerEvent:com.fawry.kafka.events.user_events.RegisterEvent
 # Mail Configuration
 server:
   port: 2222
